# prefix-system

./: .gitignore  Anchor.toml  LICENSE  README.md  commitlint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: .release.yml
programs/prefix-system/: Cargo.toml
programs/prefix-system/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/prefix-system/src/instructions/: initialize.rs  mod.rs
programs/prefix-system/src/instructions/admin/: add_verifier.rs  mod.rs  remove_verifier.rs  set_pause.rs  update_fee.rs  withdraw_treasury.rs
programs/prefix-system/src/instructions/prefix/: approve_prefix.rs  deactivate_prefix.rs  mod.rs  reactivate_prefix.rs  recover_prefix_owner_with_fee.rs  refund_prefix_fee.rs  reject_prefix.rs  submit_prefix_with_fee.rs  update_prefix_authority.rs  update_prefix_metadata.rs
programs/prefix-system/src/state/: fee_registry.rs  mod.rs  prefix_account.rs  verifiers_list.rs
scripts/: init.ts  query.ts
sdk/: .gitignore  .releaserc.json  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  types.ts  validation.ts
sdk/src/idl/: prefix_system.json  prefix_system.ts
tests/prefix-system/: admin.test.ts  events.test.ts  fee.test.ts  flow.test.ts  prefix.test.ts  sdk.test.ts
tests/prefix-system/helpers/: setup.ts  shared-setup.ts
