[package]
name = "prefix-system"
version = "0.1.0"
description = "Action Codes Protocol Prefix System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prefix_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"

